# house-price-prediction

./: .gitignore  Dockerfile  Dockerfile.api  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  schemas.py
configs/: config.yaml
notebooks/: 01_eda.ipynb  02_preprocessing_and_model.ipynb  03_shap_analysis.ipynb
src/house_prices/: __init__.py
src/house_prices/data/: loader.py
src/house_prices/features/: advanced_engineering.py  engineering.py
src/house_prices/models/: deep_models.py  optuna_tuning.py  predict.py  train.py  train_advanced.py
src/house_prices/utils/: config.py
tests/: conftest.py  test_advanced_engineering.py  test_api.py  test_config.py  test_data_loader.py  test_features.py  test_models.py
