[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "house-prices"
version = "0.1.0"
description = "Kaggle House Prices: Advanced Regression Techniques"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "mlflow>=2.9",
    "optuna>=4.0",
    "torch>=2.0",
    "rtdl-revisiting-models>=0.0.2",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "joblib>=1.3",
    "scipy>=1.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "pre-commit>=3.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/house_prices --cov-report=term-missing"
